# casim

./: .gitignore  README.md  pyproject.toml  requirements.txt
DEPRECATED/experiments/: callbacks.py  experiment_commons.py  experiment_henn.py  experiment_ibrsp.py  experiment_iopvrp.py  experiment_iwspe.py  experiment_rl.py  experiment_rl_indirect.py  experiment_rl_parallel.py
DEPRECATED/experiments/config/: config.yaml  henn_online_config.yaml  henn_online_config_search_waiting.yaml  ibrsp_config.yaml  iopvrp_config.yaml  rl_config.yaml  rl_indirect_config.yaml
DEPRECATED/ware_ops_sim/data_loaders/: __init__.py
DEPRECATED/ware_ops_sim/pipelines/: cosy_template.py  cosy_template_2.py  pipeline_runner.py
DEPRECATED/ware_ops_sim/sim/: environment.py  sim_domain.py
data/instances/IWSPE/: layout.csv
experiments/: experiment_commons.py  experiment_iwspe.py  experiment_rl.py  experiment_rl_indirect.py  experiment_rl_parallel.py
experiments/config/: config.yaml  rl_config.yaml  rl_indirect_config.yaml
experiments/config/data_cards/: iopvrp.yaml  iwspe.yaml
scenarios/: experiment_commons.py  io_helpers.py
scenarios/scenario_grocery_retailer/: build_historic_solution.py  experiment_grocery_retailer.py  scenario_specific_hooks.py
scenarios/scenario_henn_online/: README.md  experiment_henn.py  henn_online_loader.py
src/casim/: loggers.py  simulation_engine.py  trackers.py
src/casim/envs/: base_env.py
src/envs/: base_env.py
src/ware_ops_sim/: simulation_visualizer.py
tests/: test_dummy_rl_env.py  test_henn_offline.py
tests/config/: test_henn_online_config.yaml
(+184 files in other folders)
